Version: $Id$ $Name$

purple (05/18/05)
---------------------
+ Updated version to 5.0.0.22
+ Found OP_SpawnRename again. It's used to rename the Bristlebane jesters
+ Fixed problem in net layer where opcodes were showing up as 0000. Treat 0000
	as a special case where the app opcode is 00 + next byte on the wire
+ Fixed to work with patch on 05/18/2005 by bumping MAX_AA to 240

purple (05/11/05)
----------------------
+ Updated version to 5.0.0.21
+ Added some session-related opcodes to worldopcodes.xml
+ Fixed opcodes for alt exp and hooked altExpUpdateStruct so alt exp updating
	maps properly
+ Made it so OP_ManaChange can be 0 size. Bards have this a lot.
+ Fix problems with guilds numbered higher than 512
+ Added unknown world data to the unknown log
+ Fixed the skills window to properly show skills > 252
+ Show strings in the spawnlist as utf8 properly
+ Valgrind cleanup for some uninitialized references and minor memory leaks
+ All opcodes remapped for 5/11 patch
+ Structs updated for 5/11 patch
+ Added some new pseudo-classes to classes.h
+ Rehooked up stamina changes after removing stamina (only food/drink now)

dophaZ (04/17/05)
-----------------------
+ Updated version to 5.0.0.20
+ Update INSTALL to reflect new minimum autoconf 2.59 requirement for 
  Makefile.dist users.
+ cleanup configure.am, and acinclude.m4 warnings and issues.
+ Fixed need to run Makefile.dist twice problem.
+ Incorporated Purples "5.0.0.19-purple2" patch.
+ - Added to charProfileStruct:
+ - - Leadership AAs (thanks to FatherNitwit for a lot of this)
+ - - Intoxication, Toxicity, Autosplit (from Glee)
+ - - Spell refresh
+ - - expAA
+ - Fixed hpNpcUpdateStruct for 4/12 by rearranging and making hp int32
+ - Properly name drop codes for new combine containers (from uRit2CBBA)
+ - Fixed a problem with drop codes higher than 0x90 in most of the drop code mappings
+ - Added tutorial zones to zone.h (from uRit2CBBA)